...
            .refreshable {
                await self.viewModel.makeInitialAPICalls()
            }
            
            handleState(state: viewModel.state)
        }
        .navigationTitle("Orders")
    }
    
    @ViewBuilder
    private func cell(for type: CoffeeListCellType) -> some View {
        switch type {
        case .coffeeOrder(let viewModel):
...
